# deskvox

./: .clang-format  .envrc  .gitignore  AUTHORS.txt  CMakeLists.txt  INSTALL.txt  Makefile.am  README.md  README.txt  autogen.sh  configure.ac  perf.sh
virvo/: .cvsignore  .gitignore  CMakeLists.txt  Makefile-dollarg  Makefile.am  README.cvs  README.svn  autogen.sh  configure.ac  copyright-header.txt  create_makefile  makeversion.bat  makeversion.sh  readme-compiling.txt  virvo.pro
virvo/doc/: Doxyfile.txt
virvo/m4/: 64bits.m4  cg.m4  cuda.m4  dl.m4  enable-pic.m4  gl.m4  glew.m4  glu.m4  glut.m4  libsuffix.m4  nv.m4  pthread.m4  stingray.m4  volpack.m4  xlibs.m4
virvo/msvc/: libvirvo.sln  libvirvo.vcproj  test.sln
virvo/msvc8/: libvirvo.sln  libvirvo.vcproj  test.sln  test.vcproj
virvo/msvc9/: libvirvo.dsp  libvirvo.dsw  libvirvo.vcproj  test.vcproj
virvo/shader/: CMakeLists.txt  vv_ibr.vsh  vv_intersection.cg  vv_intersection.glsl  vv_intersection_geo.glsl  vv_intersection_geo_inst.glsl  vv_intersection_geo_inst.gsh  vv_intersection_geo_inst.vsh  vv_intersection_inst.glsl  vv_intersection_ver.glsl  vv_intersection_ver_inst.glsl  vv_isect_reference.vsh  vv_preint_frag.cg  vv_preint_vert.cg  vv_shader00.cg  vv_shader01.cg  vv_shader01.frag.cg  vv_shader01.fsh  vv_shader02.cg  vv_shader02.frag.cg  vv_shader02.fsh  vv_shader03.cg  vv_shader03.frag.cg  vv_shader03.fsh  vv_shader04.cg  vv_shader04.frag.cg  vv_shader04.fsh  vv_shader05.cg  vv_shader05.frag.cg  vv_shader05.fsh  vv_shader06.cg  vv_shader06.frag.cg  vv_shader06.fsh  vv_shader07.cg  vv_shader07.fsh  vv_shader08.cg  vv_shader08.frag.cg  vv_shader08.fsh  vv_shader09.cg  vv_shader09.frag.cg  (+12 more)
virvo/src/: .gitignore  GNUmakefile  Makefile.am  glext-orig.h  virvo.pro  vvaabb.cpp  vvaabb.h  vvarray.h  vvbrick.cpp  vvbrick.h  vvbsptree.cpp  vvbsptree.h  vvbsptreevisitor.cpp  vvbsptreevisitor.h  vvbsptreevisitors.cpp  vvbsptreevisitors.h  vvcg.cpp  vvcg.h  vvclusterclient.cpp  vvclusterclient.h  vvclusterserver.cpp  vvclusterserver.h  vvcolor.cpp  vvcolor.h  vvcuda.cpp  vvcuda.h  vvcudaimg.cpp  vvcudaimg.h  vvcudapar.cu  vvcudapar.h  vvcudasw.cu  vvcudasw.h  vvcudatransfunc.cu  vvcudautils.h  vvdebugmsg.cpp  vvdebugmsg.h  vvdicom.cpp  vvdicom.h  vvdynlib.cpp  vvdynlib.h  (+86 more)
virvo/src/vvbonjour/: vvbonjourbrowser.cpp  vvbonjourbrowser.h  vvbonjourentry.cpp  vvbonjourentry.h  vvbonjourregistrar.cpp  vvbonjourregistrar.h  vvbonjourresolver.cpp  vvbonjourresolver.h
virvo/src/vvmultirend/: vvtexmultirend.cpp  vvtexmultirend.h  vvtexmultirendmngr.cpp  vvtexmultirendmngr.h
virvo/test/: .gitignore  CMakeLists.txt  Makefile.am  test.csv  testall.csv  testall.sh  testoutput.csv  vview.pro  vvobjview.cpp  vvobjview.h  vvperformancetest.cpp  vvperformancetest.h  vvview.cpp  vvview.h
virvo/test/asio/: client.cpp  server.cpp
virvo/test/vvbonjour/: CMakeLists.txt  vvbonjourtest.cpp
virvo/test/vvmulticast/: CMakeLists.txt  vvmulticasttest.cpp  vvmulticasttest2.cpp
virvo/test/vvstopwatch/: CMakeLists.txt  vvstopwatchtest.cpp
virvo/tools/: CMakeLists.txt
virvo/tools/common/: vvcommon.h
virvo/tools/vcommon/: CMakeLists.txt  vvcommon.h
virvo/tools/vconv/: CMakeLists.txt  vvconv.cpp  vvconv.h
virvo/tools/vserver/: CMakeLists.txt  vvresourcemanager.cpp  vvresourcemanager.h  vvserver.cpp  vvserver.h  vvsimpleserver.cpp  vvsimpleserver.h
virvo/tools/vserver_asio/: CMakeLists.txt  main.cpp  message_queue.h  resource_manager.cpp  resource_manager.h  server.cpp  server.h  server_manager.cpp  server_manager.h  simple_server.cpp  simple_server.h
virvo/tools/vview/: CMakeLists.txt  Makefile.am  vvobjview.cpp  vvobjview.h  vvperformancetest.cpp  vvperformancetest.h  vvview.cpp  vvview.h
virvo/virvo/: CMakeLists.txt  Makefile.am  cmakeconfig.h.in  virvo.pro  vvaabb.cpp  vvaabb.h  vvaabb.impl.h  vvarray.h  vvbrick.cpp  vvbrick.h  vvbrickrend.cpp  vvbrickrend.h  vvbsptree.cpp  vvbsptree.h  vvbsptreevisitors.cpp  vvbsptreevisitors.h  vvcg.cpp  vvcg.h  vvcgprogram.cpp  vvcgprogram.h  vvclipobj.cpp  vvclipobj.h  vvclock.cpp  vvclock.h  vvclusterclient.cpp  vvclusterclient.h  vvclusterserver.cpp  vvclusterserver.h  vvcocoaglcontext.h  vvcocoaglcontext.mm  vvcolor.cpp  vvcolor.h  vvcomparisonrend.h  vvcomparisonrend.impl.h  vvcompiler.h  vvconfig.h.in  vvcpuid.cpp  vvcuda.cpp  vvcuda.h  vvcudaimg.cpp  (+174 more)
virvo/virvo/Cuda/: Array.h  Debug.h  Memory.h  Symbol.h  Texture.h
virvo/virvo/cuda/: array.h  debug.cpp  debug.h  graphics_resource.cpp  graphics_resource.h  host_device_array.h  (+6 more)
virvo/vtf/: ascending.vtf  blue_ramp.vtf  bright_colors.vtf  cool_to_warm_map.vtf  descending.vtf  fire.vtf  grayscale_ramp.vtf  green_ramp.vtf  hue_gradient.vtf  opaque.vtf  red_ramp.vtf  white.vtf
vox-desk/: CMakeLists.txt  Makefile.am  autogen.sh  configure.ac  readme-compiling.txt  readme.txt  todo.txt
vox-desk-qt/src/: CMakeLists.txt  vvcanvas.cpp  vvcanvas.h  vvclipdialog.cpp  vvclipdialog.h  vvdimensiondialog.cpp  vvdimensiondialog.h  vvdimensiondialog.ui  vvinteractor.cpp  vvinteractor.h  vvlightdialog.cpp  vvlightdialog.h  vvlightinteractor.cpp  vvlightinteractor.h  vvmainwindow.cpp  vvmainwindow.h  vvmainwindow.ui  vvmergedialog.cpp  vvmergedialog.h  vvmergedialog.ui  vvobjview.cpp  vvobjview.h  vvparameters.h  vvpluginutil.cpp  vvpluginutil.h  vvprefdialog.cpp  vvprefdialog.h  vvprefdialog.ui  vvscreenshotdialog.cpp  vvscreenshotdialog.h  vvscreenshotdialog.ui  vvshortcutdialog.cpp  vvshortcutdialog.h  vvshortcutdialog.ui  vvsliceviewer.cpp  vvsliceviewer.h  vvsliceviewer.ui  vvstereomode.h  vvtfdialog.cpp  vvtfdialog.h  (+6 more)
vox-desk/installer/: installscript.nsi
vox-desk/m4/: fox.m4
vox-desk/msvc/: DeskVOX.vcproj  VConv.vcproj  VOX.sln  Vecmath.vcproj
vox-desk/src/: CMakeLists.txt  Makefile.am  vvartracking.cpp  vvartracking.h  vvcanvas.cpp  vvcanvas.h  vvclient.cpp  vvclient.h  vvconv.cpp  vvconv.h  vvdialogs.cpp  vvdialogs.h  vvmovie.cpp  vvmovie.h  vvobjview.cpp  vvobjview.h  vvprefwindow.cpp  vvprefwindow.h  vvshell.cpp  vvshell.h  vvsliceviewer.cpp  vvsliceviewer.h  vvtranslines.cpp  vvtranslines.h  vvtranswindow.cpp  vvtranswindow.h
(+241 files in other folders)
