CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT("DeskVOX Volume Explorer")

ADD_DEFINITIONS(-DNODLL)

IF(MSVC)
  ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ENDIF(MSVC)

IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(WNO_ERROR_FLAG "-Wno-error")
ELSE(CMAKE_COMPILER_IS_GNUCXX)
  SET(WNO_ERROR_FLAG "")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

IF(WIN32)
  SET(HOST_WIN32 ${WIN32} CACHE BOOL "Whether build system is a Windows system." FORCE)
ELSE(WIN32)
  IF(APPLE)
    SET(VIRVO_WINDOWING_SYSTEM "Cocoa" CACHE STRING "Available windowing systems for render contexts (Cocoa | X11)")
  ELSE(APPLE)
    SET(VIRVO_WINDOWING_SYSTEM "X11" CACHE STRING "Available windowing systems for render contexts (X11)")
  ENDIF(APPLE)
ENDIF(WIN32)

IF(NOT DESKVOX_CONFIGURED_ONCE)
  # Defaults adapted on the first configure run, avoid adapting values again
  SET(DESKVOX_CONFIGURED_ONCE 1 CACHE INTERNAL "DeskVOX was configured at least once.")

  IF(CMAKE_COMPILER_IS_GNUCXX)
    SET(WARN_FLAGS "${WARN_FLAGS} -Wall -Wextra -Wno-sign-compare")
    IF(NOT APPLE)
      SET(WARN_FLAGS "${WARN_FLAGS} -Woverloaded-virtual")
    ENDIF(NOT APPLE)
    SET(WARN_FLAGS "${WARN_FLAGS} -Werror -Wno-error=overloaded-virtual -Wno-error=missing-field-initializers")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${WARN_FLAGS}"
        CACHE STRING "Flags used by the compiler during all build types." FORCE
        )
  ENDIF(CMAKE_COMPILER_IS_GNUCXX)
ENDIF(NOT DESKVOX_CONFIGURED_ONCE)


LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

SET(VIRVO_DIR ${PROJECT_SOURCE_DIR}/virvo)
SET(VIRVO_INCLUDE_DIR ${VIRVO_DIR}/virvo)
SET(VIRVO_SHADER_DIR ${VIRVO_DIR}/shader)
SET(VIRVO_SOURCE_DIR ${VIRVO_DIR}/virvo)

SET(INSTALL_DIR_BIN bin)
SET(INSTALL_DIR_INCLUDE include)
SET(INSTALL_DIR_LIB lib)
SET(INSTALL_DIR_SHARE share)

INCLUDE(GenerateConfigHeader)

IF(CUDA_FOUND)
  INCLUDE_DIRECTORIES(${CUDA_TOOLKIT_INCLUDE})
  #SET(EXTRA_LIBS ${EXTRA_LIBS} ${CUDA_LIBRARIES})
ENDIF(CUDA_FOUND)

INCLUDE_DIRECTORIES(${VIRVO_INCLUDE_DIR})
ADD_SUBDIRECTORY(${VIRVO_DIR})
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/vox-desk)

SET(CPACK_GENERATOR "ZIP")
INCLUDE(CPack)

IF(${CMAKE_VERSION} VERSION_GREATER "2.8.2")
  INCLUDE(FeatureSummary)
  FEATURE_SUMMARY(WHAT ALL)
ENDIF()
