SUBDIRS = src
AUTOMAKE_OPTIONS = foreign

SHADERS = \
	shader/vv_shader01.cg \
	shader/vv_shader02.cg \
	shader/vv_shader03.cg \
	shader/vv_shader04.cg \
	shader/vv_shader05.cg \
	shader/vv_shader06.cg \
	shader/vv_shader07.cg \
	shader/vv_shader08.cg \
	shader/vv_shader09.cg \
	shader/vv_shader10.cg \
	shader/vv_shader11.cg

shaderdatadir = $(datadir)/virvo
dist_shaderdata_DATA = $(SHADERS)
