AC_PREREQ(2.13)
AC_INIT(vvtexrend.h)
AC_CONFIG_SRCDIR(configure.ac)

AC_CONFIG_HEADER(vvconfig.h)

LIBVIRVO_MAJOR_VERSION=2
LIBVIRVO_MINOR_VERSION=0
LIBVIRVO_MICRO_VERSION=2
LIBVIRVO_INTERFACE_AGE=0
LIBVIRVO_EXTRA_VERSION=b
LIBVIRVO_VERSION=$LIBVIRVO_MAJOR_VERSION.$LIBVIRVO_MINOR_VERSION.$LIBVIRVO_MICRO_VERSION

LIBVIRVO_CURRENT=`expr 100 '*' $LIBVIRVO_MINOR_VERSION + $LIBVIRVO_MICRO_VERSION - $LIBVIRVO_INTERFACE_AGE`
LIBVIRVO_BINARY_AGE=`expr 100 '*' $LIBVIRVO_MINOR_VERSION + $LIBVIRVO_MICRO_VERSION`
LIBVIRVO_REVISION=$LIBVIRVO_INTERFACE_AGE
LIBVIRVO_AGE=`expr $LIBVIRVO_BINARY_AGE - $LIBVIRVO_INTERFACE_AGE`
LIBVIRVO_VERSION=$LIBVIRVO_MAJOR_VERSION.$LIBVIRVO_MINOR_VERSION.$LIBVIRVO_MICRO_VERSION$LIBVIRVO_EXTRAVERSION


AC_SUBST(LIBVIRVO_VERSION)

AM_INIT_AUTOMAKE(libvirvo, $LIBVIRVO_VERSION)

AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS")

AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_LD
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_ARG_ENABLE(cg,
	AC_HELP_STRING([--enable-cg],[build virvo with Cg shaders]),
	[enable_cg=$enableval],
	[enable_cg=yes]
)

if test "$enable_cg" = "yes"; then
AC_DEFINE(HAVE_CG, 1, [Cg shaders enabled])
fi
AC_SUBST(cg_cflags)
AC_SUBST(cg_includes)
AC_SUBST(cg_libs)

AC_ARG_WITH(cg,
	AC_HELP_STRING([--with-cg],[location of Cg library and headers]),
	[cg_dir=$withval],
	[cg_dir=/usr]
)


AC_SUBST(CPPFLAGS)
AC_SUBST(CFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
Makefile
])


