AC_PREREQ(2.13)
AC_INIT(src/vvvirvo.h)
AM_INIT_AUTOMAKE(virvo,2.0)
AC_CONFIG_SRCDIR(configure.ac)
AM_CONFIG_HEADER(src/config.h)
AC_CONFIG_MACRO_DIR([m4])

LT_INIT

LIBVIRVO_MAJOR_VERSION=2
LIBVIRVO_MINOR_VERSION=0
LIBVIRVO_MICRO_VERSION=2
LIBVIRVO_INTERFACE_AGE=0
LIBVIRVO_EXTRA_VERSION=b
LIBVIRVO_VERSION=$LIBVIRVO_MAJOR_VERSION.$LIBVIRVO_MINOR_VERSION.$LIBVIRVO_MICRO_VERSION

LIBVIRVO_CURRENT=`expr 100 '*' $LIBVIRVO_MINOR_VERSION + $LIBVIRVO_MICRO_VERSION - $LIBVIRVO_INTERFACE_AGE`
LIBVIRVO_BINARY_AGE=`expr 100 '*' $LIBVIRVO_MINOR_VERSION + $LIBVIRVO_MICRO_VERSION`
LIBVIRVO_REVISION=$LIBVIRVO_INTERFACE_AGE
LIBVIRVO_AGE=`expr $LIBVIRVO_BINARY_AGE - $LIBVIRVO_INTERFACE_AGE`
LIBVIRVO_VERSION=$LIBVIRVO_MAJOR_VERSION.$LIBVIRVO_MINOR_VERSION.$LIBVIRVO_MICRO_VERSION$LIBVIRVO_EXTRAVERSION

AC_SUBST(LIBVIRVO_VERSION)

AM_INIT_AUTOMAKE(libvirvo, $LIBVIRVO_VERSION)

AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS")

AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_LD
AC_PROG_INSTALL
#AC_PROG_LIBTOOL
AC_CHECK_TOOL(AR,ar)
AC_PROG_RANLIB

CHECK_CG
CHECK_GL
CHECK_GLEW
CHECK_GLU
CHECK_GLUT
CHECK_PTHREAD
CHECK_STINGRAY
ENABLE_PIC

AC_SUBST(CPPFLAGS)
AC_SUBST(CFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT(Makefile src/Makefile test/Makefile)


