AC_PREREQ(2.13)
AC_INIT(src/vvshell.cpp)
AM_INIT_AUTOMAKE(deskvox,2.0)
AC_CONFIG_SRCDIR(configure.ac)
AC_CONFIG_HEADER(src/config.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
#AC_PROG_LIBTOOL
AC_PROG_LD
AC_PROG_INSTALL
AC_CHECK_TOOL(AR,ar)
AC_PROG_RANLIB

AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS")
AM_MAINTAINER_MODE

CHECK_CG
CHECK_STINGRAY
CHECK_FOX

AC_SUBST(CPPFLAGS)
AC_SUBST(CFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT(Makefile src/Makefile)
