# @file
# 
# CMakeLists.txt for sys vview
#
# @author Blasius Czink

SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "$ENV{EXTERNLIBS}/glut")
FIND_PACKAGE(GLUT)

IF(WIN32)
  FIND_PATH(PTHREADW32_INCLUDE_DIR pthread.h PATHS "$ENV{EXTERNLIBS}/pthreads/include")
  FIND_LIBRARY(PTHREADW32_LIBRARY pthreadVC2.lib PATHS "$ENV{EXTERNLIBS}/pthreads/lib")
  SET(EXTRA_LIBS ${PTHREADW32_LIBRARY} ws2_32.lib) 
ENDIF(WIN32)

IF(CUDA_FOUND)
  ADD_DEFINITIONS(-DNV_PROPRIETARY_CODE)
ENDIF(CUDA_FOUND)

INCLUDE_DIRECTORIES(
  ${PTHREADW32_INCLUDE_DIR}
  ${OPENGL_INCLUDE_DIR}
  ${GLUT_INCLUDE_DIR}
  ${GLEW_INCLUDE_DIR} 
)

SET(VVIEW_SOURCES
  vvview.cpp
  vvperformancetest.cpp
  vvobjview.cpp 
)

SET(VVIEW_HEADERS
  vvview.h
  vvperformancetest.h
  vvobjview.h 
)

ADD_COVISE_EXECUTABLE(vview ${VVIEW_SOURCES} ${VVIEW_HEADERS})
TARGET_LINK_LIBRARIES(vview coVirvo ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${EXTRA_LIBS}) # ${CMAKE_THREAD_LIBS_INIT} 

COVISE_INSTALL_TARGET(vview)
